🐛 Fixes details image overflow

--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -123,7 +123,6 @@
     .secondImg {
         border: none !important;
         box-shadow: none !important;
-        object-fit: cover !important;
     }
 }
 
@@ -144,6 +143,5 @@
     .secondImg {
         border: none !important;
         box-shadow: none !important;
-        object-fit: cover !important;
     }
 }
